<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.unb.mobiledev.saferideapp.DetailActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_left_chevron" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="410dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/student_info" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginStart="18dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/detail_textview"
            android:scrollbars="horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FF5722"
            android:text="@string/detail_tag" />


        <Button app:backgroundTint="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="460dp"
            android:text="@string/maps_button"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/ic_rectangle_button_background"
            android:id="@+id/map_button"/>

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_button"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>
    </RelativeLayout>

</HorizontalScrollView>